# power-consumption-of-cameras_async_web_service

rust-async-service/: .env.example  Cargo.toml  README.md
rust-async-service/.cargo/: config.toml
rust-async-service/src/: calculation.rs  handlers.rs  main.rs  models.rs  server.rs
rust-async-service/target-msvc/: .rustc_info.json
rust-async-service/target-msvc/debug/: rust-async-service.d
rust-async-service/target-msvc/debug/.fingerprint/actix-codec-b0d42d38e350fef4/: lib-actix_codec  lib-actix_codec.json
rust-async-service/target-msvc/debug/.fingerprint/actix-http-0f3bc359d229b488/: lib-actix_http  lib-actix_http.json
rust-async-service/target-msvc/debug/.fingerprint/actix-macros-75b92f20e981cc7a/: lib-actix_macros  lib-actix_macros.json
rust-async-service/target-msvc/debug/.fingerprint/actix-router-7252030f0398f19d/: lib-actix_router  lib-actix_router.json
rust-async-service/target-msvc/debug/.fingerprint/actix-router-a2579ef3cc5bc5c9/: lib-actix_router  lib-actix_router.json
rust-async-service/target-msvc/debug/.fingerprint/actix-rt-9b6d79dda64fef64/: lib-actix_rt  lib-actix_rt.json
rust-async-service/target-msvc/debug/.fingerprint/actix-server-89ac391baaf6d9d0/: lib-actix_server  lib-actix_server.json
rust-async-service/target-msvc/debug/.fingerprint/actix-service-92561d7fccf20bfa/: lib-actix_service  lib-actix_service.json
rust-async-service/target-msvc/debug/.fingerprint/actix-utils-125ff96482e8dde7/: lib-actix_utils  lib-actix_utils.json
rust-async-service/target-msvc/x86_64-pc-windows-msvc/debug/: rust-async-service.d
(+567 files in other folders)
